--- a/EuroVanilla_lib/EuroVanilla_lib.vcxproj.filters
+++ b/EuroVanilla_lib/EuroVanilla_lib.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\SingleOption\EtcFunctions.cpp">
       <Filter>ext</Filter>
     </ClCompile>
+    <ClCompile Include="..\SingleOption\EuropeanOptionMC.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="maintest.h">
