file inut output

--- a/EuroVanilla_lib/EuroVanilla_lib.vcxproj
+++ b/EuroVanilla_lib/EuroVanilla_lib.vcxproj
@@ -19,10 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\LIB\klib\EtcFunctions.cpp" />
     <ClCompile Include="..\..\..\..\LIB\klib\j_fd.cpp" />
+    <ClCompile Include="..\..\..\..\LIB\klib\k_BasicMath.cpp" />
     <ClCompile Include="..\..\..\..\LIB\klib\k_miscellaneous.cpp" />
+    <ClCompile Include="..\..\..\..\LIB\klib\k_OptionFormula.cpp" />
+    <ClCompile Include="..\..\..\..\LIB\klib\k_probability.cpp" />
     <ClCompile Include="..\SingleOption\Dividend.cpp" />
-    <ClCompile Include="..\SingleOption\EtcFunctions.cpp" />
     <ClCompile Include="..\SingleOption\EuropeanOption.cpp" />
     <ClCompile Include="..\SingleOption\EuropeanOptionMC.cpp" />
     <ClCompile Include="..\SingleOption\MarketParam.cpp" />
@@ -35,8 +38,12 @@
     <ClCompile Include="maintest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\LIB\klib\EtcFunctions.h" />
     <ClInclude Include="..\..\..\..\LIB\klib\j_fd.h" />
+    <ClInclude Include="..\..\..\..\LIB\klib\k_BasicMath.hpp" />
     <ClInclude Include="..\..\..\..\LIB\klib\k_miscellaneous.hpp" />
+    <ClInclude Include="..\..\..\..\LIB\klib\k_OptionFormula.hpp" />
+    <ClInclude Include="..\..\..\..\LIB\klib\k_probability.hpp" />
     <ClInclude Include="EuropeanOption_lib.h" />
     <ClInclude Include="maintest.h" />
   </ItemGroup>
