--- a/SingleAutocallable_lib/SingleAutocallable_lib.vcxproj.filters
+++ b/SingleAutocallable_lib/SingleAutocallable_lib.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="..\SingleOption\Dividend.cpp">
       <Filter>ext</Filter>
     </ClCompile>
-    <ClCompile Include="..\SingleOption\EtcFunctions.cpp">
-      <Filter>ext</Filter>
-    </ClCompile>
     <ClCompile Include="..\SingleOption\MarketParam.cpp">
       <Filter>ext</Filter>
     </ClCompile>
@@ -51,6 +48,21 @@
     <ClCompile Include="..\..\..\..\LIB\klib\k_miscellaneous.cpp">
       <Filter>ext</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\LIB\klib\EtcFunctions.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SingleOption\EuropeanOption.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\LIB\klib\k_OptionFormula.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\LIB\klib\k_probability.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\LIB\klib\k_BasicMath.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="SingleAutocallable_lib.def">
@@ -65,9 +77,6 @@
       <Filter>ext</Filter>
     </ClInclude>
     <ClInclude Include="..\SingleOption\Dividend.h">
-      <Filter>ext</Filter>
-    </ClInclude>
-    <ClInclude Include="..\SingleOption\EtcFunctions.h">
       <Filter>ext</Filter>
     </ClInclude>
     <ClInclude Include="..\SingleOption\MarketParam.h">
@@ -89,6 +98,21 @@
       <Filter>ext</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\LIB\klib\k_miscellaneous.hpp">
+      <Filter>ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\LIB\klib\EtcFunctions.h">
+      <Filter>ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SingleOption\EuropeanOption.h">
+      <Filter>ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\LIB\klib\k_OptionFormula.hpp">
+      <Filter>ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\LIB\klib\k_probability.hpp">
+      <Filter>ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\LIB\klib\k_BasicMath.hpp">
       <Filter>ext</Filter>
     </ClInclude>
   </ItemGroup>
