--- a/SingleOption/SingleOption.vcxproj.filters
+++ b/SingleOption/SingleOption.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="AutocallSwap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="testgit.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AmericanOption.h">
